# ftp_termux

./: .gitignore  archivo_descargado.txt  cliente_ftp.py  conf.py  external.yml  main.py  pyproject.toml  requirements.txt  server_ftp.py
backend/ftp_protocol/: pom.xml
backend/ftp_protocol/src/main/java/com/data/ftp_protocol/: FtpProtocolApplication.java
backend/ftp_protocol/src/main/java/com/data/ftp_protocol/controller/: HomeController.java
backend/ftp_protocol/src/main/java/com/data/ftp_protocol/models/: FormFtp.java
backend/ftp_protocol/src/main/java/com/data/ftp_protocol/service/: CommandService.java
backend/ftp_protocol/src/main/resources/: application.properties
backend/ftp_protocol/src/test/java/com/data/ftp_protocol/: FtpProtocolApplicationTests.java
command/: pyproject.toml
frontend/src/: App.css  App.tsx
ftp_protocol/: commands.py  receiver.py
ftp_protocol/core/: native.py  state.py  systems.py
ftp_protocol/handler/dependencies/: check_dependencies.py
shell/command/: commands.py  shell.py
shell/command/core/: state.py
shell/command/view/: handler.py  init.py
shell/command/view/cli/: promp.py
src/ftpsend/domain/: database.py  permissions.py  user.py
src/ftpsend/domain/ports/: ftp.py  ftp_handler.py
src/ftpsend/infrastructure/: authorizers.py  connections.py  ftp_service.py  ftpserver.py  handlers.py
src/ftpsend/presentation/cli/: main.py
src/ftpsend/presentation/gui/: main.py
src/ftpsend/presentation/gui/features/ftp/components/: file.py  ftp_config.py  user.py
src/ftpsend/presentation/gui/features/ftp/pages/: home.py
