[project]
name = "ftpsend"
version = "0.1.0"
description = ""
authors = [
    {name = "Piero Andre",email = "gabrielliendo1257@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]

[tool.poetry]
packages = [{include = "ftpsend", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
